# rag-fundamentals-companion

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  clients.py  golden_set.jsonl  pyproject.toml
.github/workflows/: smoke-tag.yml
LICENSES/: CC-BY-SA-4.0.txt  CC0-1.0.txt
corpus/: SOURCES.md  cumulus-bearista-coffee-review.md  cumulus-brand-voice.md  cumulus-faq-customer.md  cumulus-hiring.md  cumulus-north-star.md  cumulus-office-it.md  cumulus-okr-2026q2.md  cumulus-oncall.md  cumulus-pricing.md  cumulus-support-escalation.md  haruna-club-painting.md  haruna-expense.md  haruna-remote-work.md  stratus-api-reference.md  stratus-architecture-v3.md  stratus-postmortem-2024-06.md
corpus/v1/: SOURCES.md  haruna-faq-helpdesk.md  haruna-incident-flow.md  pegasus-er-diagram.md  stratus-microservice-boundaries-draft.md
corpus/v2/: SOURCES.md  draft_queries.jsonl  golden_set.jsonl  lumen-rollback-pallet.md  mirage-architecture-v2-archive.md  mirage-architecture-v3.md  nagisa-boardgame-monthly.md  nagisa-csat-report-2025q1.md  nagisa-expense-2023-archive.md  nagisa-expense.md  nagisa-faq-helpdesk.md  nagisa-incident-flow.md  nagisa-lt-evaluation.md  nagisa-office-security.md  nagisa-onboarding-checklist.md  nagisa-remote-work.md  nagisa-running-club-plan.md  nagisa-snack-policy.md
examples/: evaluate.py  naive_rag.py
examples/generation/: run.py
examples/ops/: run.py
examples/retrieval/: chunker.py  embedder.py  hybrid.py  run.py
scripts/: inspect_embeddings.py  smoke_part.py
tests/: test_chunker_metadata.py  test_clients_ollama.py  test_pii_redactor.py
(+4 files in other folders)
